apps/pyroscope/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyroscope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyroscope
  template:
    metadata:
      labels:
        app: pyroscope
        # sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: pyroscope
          args:
            - -config.file=/etc/pyroscope/pyroscope.yaml
          image: grafana/pyroscope:2.3.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4040
          volumeMounts:
            - mountPath: /etc/pyroscope
              name: config
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: config
