apps/pyroscope/python-fast-slow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fast-slow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-fast-slow
  template:
    metadata:
      labels:
        app: python-fast-slow
    spec:
      containers:
        - name: python-fast-slow
          image: python:3.14
          imagePullPolicy: IfNotPresent
          command: [ "python3" ]
          args: [ "/app/main.py" ]
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          configMap:
            name: python-app
            items:
              - key: main
                path: main.py
