apps/pyroscope/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
  labels:
    app: pyroscope
spec:
  selector:
    app: pyroscope
  ports:
    - protocol: TCP
      name: http
      port: 4040
      targetPort: 4040
