apps/pyroscope/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pyroscope
spec:
  hosts:
    - pyroscope.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: pyroscope.pyroscope.svc.cluster.local
            port:
              number: 4040
