apps/pyroscope/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: pyroscope
spec:
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - pyroscope.home.alden.ai
  selector:
    matchLabels:
      app: pyroscope
